force-app/main/default/objects/Person_360_Mapping__mdt.object
<CustomObject>
    <description>Mapping matrix for Person 360 roll down logic from Contact</description>
    <fields>
        <fullName>Classification__c</fullName>
        <description>Classification of Rolldown to Classification__c field</description>
        <inlineHelpText>Classification of Rolldown to Classification__c field</inlineHelpText>
        <label>Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Private</fullName>
                    <default>true</default>
                    <label>Private</label>
                </value>
                <value>
                    <fullName>Monash</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContactSourceField__c</fullName>
        <description>Contact Source Field Api Name</description>
        <inlineHelpText>Contact Source Field Api Name</inlineHelpText>
        <label>Contact Source Field</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsPrimary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field which will be set to the primary context of the person maps to Is_Primary__c</description>
        <inlineHelpText>Field which will be set to the primary context of the person maps to Is_Primary__c</inlineHelpText>
        <label>Is Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RollDirection__c</fullName>
        <label>Roll Direction</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Both</fullName>
                    <default>true</default>
                    <label>Both</label>
                </value>
                <value>
                    <fullName>Down</fullName>
                </value>
                <value>
                    <fullName>Up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RollDownBlanks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Roll Down Blanks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RollDownField__c</fullName>
        <description>Target Field to Map values From Contact</description>
        <inlineHelpText>Target Field to Map values From</inlineHelpText>
        <label>Roll Down Field</label>
        <metadataRelationshipControllingField>Person_360_Mapping__mdt.RollDownSObject__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Person_Roll_Downs</relationshipLabel>
        <relationshipName>Person_Roll_Downs</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>RollDownSObject__c</fullName>
        <description>Target SObject to Roll down</description>
        <inlineHelpText>Target SObject to Roll down</inlineHelpText>
        <label>Roll Down SObject</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Person_Roll_Downs</relationshipLabel>
        <relationshipName>Person_Roll_Downs</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>RollUpBlanks__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Roll Up Blanks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RollUpSort__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true this will perform a sorting ORDER BY Start_Date__c DESC, createddate DESC to roll up to Contact</description>
        <inlineHelpText>If true this will perform a sorting ORDER BY Start_Date__c DESC, createddate DESC to roll up to Contact</inlineHelpText>
        <label>RollUp Sort</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RollUpType__c</fullName>
        <description>Mapped as Rollup Type identifier</description>
        <inlineHelpText>Mapped as Rollup Type identifier</inlineHelpText>
        <label>RollUpType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PRIMARY</fullName>
                    <default>true</default>
                    <label>PRIMARY</label>
                </value>
                <value>
                    <fullName>PRIVATE</fullName>
                </value>
                <value>
                    <fullName>MONASH</fullName>
                </value>
                <value>
                    <fullName>BUSINESS</fullName>
                </value>
                <value>
                    <fullName>MOBILE</fullName>
                </value>
                <value>
                    <fullName>ASSISTANT</fullName>
                </value>
                <value>
                    <fullName>FAX</fullName>
                </value>
                <value>
                    <fullName>LANDLINE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Phone Type Mapping</description>
        <inlineHelpText>Phone Type Mapping</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mobile</fullName>
                    <default>true</default>
                    <label>Mobile</label>
                </value>
                <value>
                    <fullName>Assistant</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Undefined</fullName>
                </value>
                <value>
                    <fullName>Landline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Person 360 Mapping</label>
    <listViews>
        <fullName>ALLMDT</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>ContactSourceField__c</columns>
        <columns>RollDownSObject__c</columns>
        <columns>RollDownField__c</columns>
        <columns>IsPrimary__c</columns>
        <columns>Classification__c</columns>
        <columns>Type__c</columns>
        <columns>RollUpType__c</columns>
        <columns>RollUpSort__c</columns>
        <columns>RollDirection__c</columns>
        <columns>RollUpBlanks__c</columns>
        <columns>RollDownBlanks__c</columns>
        <filterScope>Everything</filterScope>
        <label>ALLMDT</label>
    </listViews>
    <listViews>
        <fullName>Name</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>ContactSourceField__c</columns>
        <columns>RollDownSObject__c</columns>
        <columns>RollDownField__c</columns>
        <columns>IsPrimary__c</columns>
        <columns>Classification__c</columns>
        <columns>Type__c</columns>
        <columns>RollUpType__c</columns>
        <columns>RollUpSort__c</columns>
        <columns>RollDirection__c</columns>
        <columns>RollDownBlanks__c</columns>
        <columns>RollUpBlanks__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RollDownSObject__c</field>
            <operation>equals</operation>
            <value>Name</value>
        </filters>
        <label>Name</label>
    </listViews>
    <pluralLabel>Person360 Mappings</pluralLabel>
    <validationRules>
        <fullName>IsPrimaryCheck</fullName>
        <active>true</active>
        <description>Checks if Is Primary</description>
        <errorConditionFormula>AND(
IsPrimary__c,
NOT(ISPICKVAL(RollUpType__c, &apos;PRIMARY&apos;))
)</errorConditionFormula>
        <errorDisplayField>RollUpType__c</errorDisplayField>
        <errorMessage>Set to Primary if IsPrimary is true</errorMessage>
    </validationRules>
</CustomObject>